added header title and meta elements along with linked stylesheet

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 
 <head>
-<!-- TODO: add head content below -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ash's Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
 <!-- TODO: add body content below -->
+<header>
+    <h1 class="page-title">
+        Ash Ketchum
+    </h1>
+</header>
 
+<main>
+</main>
 </body>
 
 </html>
